ssu_score/error/20190002/13_error.txt
STD_DIR/20190002/13.c:12:18: error: variable has incomplete type 'struct sigacion'
        struct sigacion sig_act;
                        ^
STD_DIR/20190002/13.c:12:9: note: forward declaration of 'struct sigacion'
        struct sigacion sig_act;
               ^
1 error generated.
